--- a/TODO
+++ b/TODO
@@ -27,10 +27,10 @@ Thesis Checklist:
     ☐ delta plots @started(18-06-13 13:37)
     ☐ read another paper 
   Writing:
-    ☐ migrate thesis sections to appendix
+    ☐ migrate thesis sections to appendix @started(18-06-13 15:42)
     ☐ start data analysis section
     ☐ revise abstract
-    ☐ Garrett's corrections
+    ✔ Garrett's corrections @done(18-06-13 15:42)
     ☐ Mom's corrections
     ☐ write conclusion
     ☐ trim the fat!
