--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@ Thesis Checklist:
           IOI of 460msec = 130 bpm
     ☐ start developing presentation slides
       ☐ target time = 30 minutes
-    ☐ test more people out!
+    ✔ test more people out! @done(18-06-19 12:43)
     ☐ build another proto for Gus
   Data:
     ✔ Plot of haptic vs. audible performance @done(18-06-13 13:32)
@@ -25,7 +25,8 @@ Thesis Checklist:
       ✔ merge Judy/Alex into Combo @done(18-06-13 13:32)
     ✔ read up on stats @done(18-06-13 13:32)
     ☐ delta plots @started(18-06-13 13:37)
-    ☐ read another paper 
+    ☐ remove 412 (Judy)
+    ✘ read another paper @cancelled(18-06-19 12:42)
   Writing:
     ☐ migrate thesis sections to appendix @started(18-06-13 15:42)
     ☐ start data analysis section
