--- a/Thesis/thesis-dataAnalysis.tex
+++ b/Thesis/thesis-dataAnalysis.tex
@@ -1,2 +1,10 @@
 \chapter{Data Analysis} \label{DataAnalysis}
 
+\section{Results}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\columnwidth]{AllSummary.png}
+    \caption{Overview of all tests across all participants}
+    \label{fig:AllSummary}
+\end{figure}
+
